# sindri-resources

./: .gitignore  API_KEY  LICENSE  README.md  TODO.md  solter
.github/workflows/: ci.yaml
circom/: README.md
circom/food_ml/: README.md  Sindri.json  model_weights.json  query_model.py  upload_circuit.py  vocab.txt
circom/food_ml/circuit_def/: main.circom
circom/foodie/: query_model.py  upload_circuit.py
circom/foodie/circuit_def/: circuit.circom  sindri.json
circom/multiplier2/: main.circom  proof_input_example.json  sindri.json
circom/multiplier2_key_upload/: README.md
circom/multiplier2_wasm/: Sindri.json
circom/sha256/: README.md  example_input.json  sindri.json
circom/sudoku/: README.md  compile_and_prove.py  main.circom  proof_input_example.json  sindri.json  utils.circom  verify.py
circom/sudoku/circomlib/: aliascheck.circom  bitify.circom  compconstant.circom
circuit_database/: .gitignore  README.md  _prepare_circuit_database.py  prepare_circuit_database.py
circuit_database/circom/: README.md
circuit_database/circom/food_ml/: README.md  input.json  regions.txt
circuit_database/circom/foodie/: README.md
circuit_database/circom/multiplier2/: README.md  Sindri.json  sindri.json
circuit_database/circom/multiplier2_key_upload/: README.md  sindri.json
circuit_database/circom/multiplier2_wasm/: README.md  Sindri.json
circuit_database/circom/sha256/: README.md  Sindri.json  circuit.circom  sindri.json
circuit_database/circom/sudoku/: README.md  verify.py
circuit_database/gnark/: README.md
circuit_database/gnark/cubic_v9/: sindri.json
circuit_database/gnark/poseidon/: poseidon_test.go
circuit_database/gnark/v8_cubic_bls12_377/: Sindri.json
circuit_database/gnark/v8_cubic_bls12_381/: Sindri.json  circuit.go  go.sum
circuit_database/gnark/v8_cubic_bls24_317/: Sindri.json
circuit_database/gnark/v8_cubic_bw6_633/: circuit.go
circuit_database/gnark/v8_cubic_bw6_761/: circuit.go
circuit_database/gnark/v8_cubic_key_upload/: proving_key
circuit_database/halo2/: README.md
circuit_database/halo2/axiom-v0.2.2/multiply/: Cargo.toml  README.md  sindri.json
circuit_database/halo2/cv_cubic/: Cargo.toml  README.md  Sindri.json  input.json
circuit_database/halo2/cv_fibonacci/: Cargo.toml  README.md
circuit_database/halo2/pse-v0.3.0/merkle_tree/: Cargo.toml  README.md  input.json  sindri.json
circuit_database/halo2/pse-v0.3.0/merkle_tree/src/: lib.rs
circuit_database/jolt/: README.md
circuit_database/jolt/fib-guest/: Cargo.toml  sindri.json
circuit_database/noir/: README.md
circuit_database/plonky2/: README.md
circuit_database/plonky2/hashes/: Cargo.toml  input.json  sindri.json
circuit_database/plonky2/hashes/src/: lib.rs  utils.rs
circuit_tutorials/: README.md
circuit_tutorials/circom/: README.md
circuit_tutorials/gnark/: README.md
circuit_tutorials/halo2/: README.md
circuit_tutorials/halo2/axiom-v0.3.0/float_radius/zk_execute/: .gitignore  Cargo.toml
circuit_tutorials/halo2/axiom-v0.3.0/float_radius/zk_execute/src/: lib.rs
circuit_tutorials/jolt/: README.md
circuit_tutorials/jolt/sha3_chain/: .env  .gitignore  Cargo.toml  README.md  input.json  rust-toolchain  rustfmt.toml  sample.env
circuit_tutorials/jolt/sha3_chain/data/: compile_out.json  prove_out.json
circuit_tutorials/jolt/sha3_chain/guest/: Cargo.toml  sindri.json
circuit_tutorials/jolt/sha3_chain/guest/src/: lib.rs  utils.rs
circuit_tutorials/jolt/sha3_chain/src/: main.rs  sindri.rs  utils.rs
circuit_tutorials/noir/: README.md
circuit_tutorials/plonky2/: README.md
example-code/: .gitignore  README.md  compile.py  prove.py  quickstart.js  quickstart.py
example-code/rust_quickstart/: Cargo.toml  README.md
gnark/: README.md
gnark/compress/: .gitignore  README.md  Sindri.json  circuit.go  compile.mjs  go.mod  input.json  package-lock.json  package.json  verify.go
gnark/cubic/: Sindri.json  sindri.json
gnark/cubic_v9/: Sindri.json  circuit.go  go.mod  go.sum  sindri.json
gnark/poseidon/: Sindri.json  go.sum  sindri.json
gnark/poseidon_v9/: constants.go  go.sum  poseidon_ext.go  sindri.json
gnark/v8_cubic_bls12_377/: README.md
gnark/v8_cubic_bls24_315/: Sindri.json  circuit.go
gnark/v8_cubic_bls24_317/: circuit.go
gnark/v8_cubic_bn254/: input.json
gnark/v8_cubic_bw6_633/: Sindri.json
gnark/v8_cubic_bw6_761/: Sindri.json
gnark/v8_cubic_key_upload/: README.md  Sindri.json  verifying_key
gnark/v8_exponentiate/: README.md  Sindri.json  input.json
gnark/v8_poseidon/: Sindri.json
gnark/v9_cubic/: README.md  Sindri.json
halo2/: README.md
halo2/av2_multiply/: README.md
halo2/av2_multiply_key_upload/: input.json
halo2/av2_storage_proof/: Sindri.json
halo2/av3_goerli_header/: Cargo.toml  README.md  Sindri.json
halo2/av3_mainnet_header/: README.md  Sindri.json  input.json
halo2/av3_quadratic/: README.md
halo2/av3_quadratic_key_upload/: Cargo.toml
halo2/axiom-v0.2.2/: README.md
halo2/axiom-v0.3.0/: README.md
halo2/axiom-v0.3.0/quadratic_circuit/: Cargo.toml  Sindri.json  sindri.json
halo2/axiom-v0.3.0/quadratic_circuit/src/: lib.rs
halo2/cv_fibonacci/: Sindri.json
halo2/cv_mult/: Cargo.toml  Sindri.json
halo2/storage_proof/: README.md
noir/: README.md
noir/billion_zk_vote_v0_10_5/: Nargo.toml  Prover.toml  README.md  Sindri.json
noir/decision_tree_v0_7_1/: Nargo.toml  README.md
noir/neq_v0_10_5/: README.md
noir/pagerank/: .gitignore  README.md  compile.mjs  package-lock.json
old/circom/: README.md
old/example-code/: README.md  quickstart.js  quickstart.py
old/gnark/cubic/: README.md  (+1 more)
reference_code/: .gitignore  README.md  quickstart.js  quickstart.py  sdk.py  sdk_quickstart.py
reference_code/quickstart_rust/: Cargo.toml  README.md
reference_code/quickstart_rust/src/: main.rs
scripts/: .gitignore  README.md  compress_sample_circuits.py  ez_circom.py  ez_food_ml.py  ez_gnark_v8.py  ez_gnark_v9.py  ez_halo2_av2.py  ez_halo2_av3.py  ez_halo2_cv.py  ez_noir.py  list_sample_circuits.py  quickstart.js  quickstart.py  sindri_sdk.py
scripts/rust_quickstart/: Cargo.toml
(+231 files in other folders)
