[package]
name = "sindri-quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
reqwest = { version = "0.11.20", features = ["multipart", "json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tar = "0.4.35"
tokio = { version = "1.32", features = ["full"] }
