[package]
name = "cubic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chiquito = { git = "https://github.com/privacy-scaling-explorations/chiquito.git" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = [
    "circuit-params",
], tag = "v2023_04_20" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2", features = [
    "derive_serde",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "d3746109d7d38be53afc8ddae8fdfaf1f02ad1d7", features = [
    "circuit-params",
] }