[package]
name = "fibo_example"
version = "0.1.2023092400"
edition = "2021"


[dependencies]
chiquito = { git = "https://github.com/privacy-scaling-explorations/chiquito.git" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = [
    "circuit-params",
], tag = "v2023_04_20" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2", features = [
    "derive_serde",
] }
polyexen = { git = "https://github.com/Dhole/polyexen.git", rev = "67148a8aabb000a61a169b2533b2526c5b76c42f" }


[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "d3746109d7d38be53afc8ddae8fdfaf1f02ad1d7", features = [
    "circuit-params",
] }