[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev="33c737e60af2bcb514d7b83ca8a3bd0143d49d21", features = ["guest-std"] }
serde = { version = "1.0", features = ["derive"] }