[package]
name = "hash_circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.14.5"
"plonky2" = { version = "0.2.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0.44"
num = "0.4.3"
rand_chacha = "0.3.0"