[package]
name = "sindri-script"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
sindri = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.124"
tar = "0.4.41"
flate2 = "1.0.31"
reqwest = "0.12.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
hex = "0.4.3"

jolt = { package = "jolt-core", git = "https://github.com/a16z/jolt", rev="55c577f5a859eee843fd88d1d14bd2127b3ddd1d"}
common = { package = "common", git = "https://github.com/a16z/jolt", rev="55c577f5a859eee843fd88d1d14bd2127b3ddd1d"}
ark-serialize = { version = "0.4.2", default-features = false, features = [
    "derive"
] }
ark-bn254 =  "0.4.0"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
