[package]
name = "quadratic-circuit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.1", features = ["derive"] }
clap-num = "1.0.2"
bincode = "1.3.3"
itertools = "0.10.3"
base64 = "0.21.2"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

# Axiom's helper API with basic functions 
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.3.0", default-features = false, features = ["halo2-axiom", "mimalloc"] }