[package]
name = "mult-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "axiom"
path = "axiom_prover.rs"

[[bin]]
name = "pse"
path = "pse_prover.rs"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.2.2", default-features = true }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"