[package]
name = "merkle_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0"} 
shielder = { git = "https://github.com/Cardinal-Cryptography/client-side-proving-benchmarks.git" }
halo2_poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon-gadget" } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
