[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev="55c577f5a859eee843fd88d1d14bd2127b3ddd1d", features = ["guest-std"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = { version = "0.10.8"}